feat(states): add states page with CRUD UI, routing & menu
- Added /states route and linked it in the main navigation menu
- Implemented States page
- Enabled create, edit, and delete operations via modal dialogs
- Added StateChip component that displays state with colors
- Added custom & replace some properties on Color Picker from PrimeNG

--- a/src/styles.css
+++ b/src/styles.css
@@ -19,3 +19,16 @@ html {
 .custom-message .p-message-text {
   font-weight: 400; /* Cambia a tu peso deseado */
 }
+
+.custom-color-picker {
+  border-radius: 6px;
+  outline: 1px solid #cbd5e1;
+  outline-offset: 2px;
+}
+
+/* PrimeNG replaces */
+
+.p-colorpicker-preview:enabled:focus-visible {
+  outline-width: 2px !important;
+  outline-offset: 3px !important;
+}
