--- a/src/app/core/auth/pages/register/register.component.html
+++ b/src/app/core/auth/pages/register/register.component.html
@@ -1,4 +1,4 @@
-<section class="surface-overlay px-4 lg:px-6 py-4 surface-border">
+<section class="surface-overlay px-4 lg:px-6 py-4 surface-border box-container lg:min-w-3xl min-w-xl">
   <div class="border-bottom-1 surface-border">
     <h2 class="mt-0 mb-2 text-900 font-bold text-4xl">Registrarse</h2>
     <p class="mt-0 mb-5 text-700 font-normal text-base">
