--- a/src/app/core/auth/pages/register/register.component.html
+++ b/src/app/core/auth/pages/register/register.component.html
@@ -57,7 +57,7 @@
             >aqui</a
           >
         </p>
-        <p-button label="Entrar" (onClick)="register()" />
+        <p-button label="Entrar" [loading]="loading()" (onClick)="register()" />
       </div>
     </form>
   </div>
